--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0   
   shared_preferences: ^2.0.9
+  flutter_colorpicker: ^1.0.2
 
 dev_dependencies:
   flutter_test:
